--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,14 @@
 #fondo {
-    background-color: cornflowerblue;
+    background: rgb(58,20,65);
+background: linear-gradient(90deg, rgba(58,20,65,1) 38%, rgba(138,109,135,1) 100%);
     height: 300px;
 }
 
 #teclado {
-    border: solid 1px blue;
-    background-color: grey;
+    background: rgb(58,20,65);
+    background: linear-gradient(90deg, rgba(58,20,65,1) 100%, rgba(138,109,135,1) 100%);
     margin: auto 40%;
-    width: 290px;
+    width: 280px;
     height: 130px;
     padding: 5px;
     top: 100px;
@@ -40,4 +41,39 @@
  border-radius: 4px;
  border-style: hidden;
  font-size: 20px;
+}
+
+#buscadorT{
+    background-color: rgb(105, 192, 236);
+    color: white;
+    border-radius: 4px;
+    border-style: hidden;
+    font-size: 20px;
+}
+
+#punto{
+    border-radius: 4px;
+    border-style: hidden;
+    font-size: 20px;
+}
+
+#espacio{
+    border-radius: 4px;
+    border-style: hidden;
+    font-size: 20px;
+    width: 135px;
+    height: 25px;
+    
+}
+
+#coma{
+    border-radius: 4px;
+    border-style: hidden;
+    font-size: 20px;
+}
+
+#num{
+    border-radius: 4px;
+    border-style: hidden;
+    font-size: 20px;
 }
